# fidoac

./: .gitignore  .gitmodules  README.md  docker-compose.yml
fidoac_android/app/src/main/cpp/: CMakeLists.txt  fidoac_verify.cpp  fidoac_verify.h  mainexe.cpp  native-lib.cpp
fidoac_android/rust/: Cargo.toml  zinfo.txt
fidoac_android/rust/src/: lib.rs
fidoac_android/rust/src/common/: mod.rs
fidoac_android/rust/src/zkp/: mod.rs  zkpmain.rs
fidoac_server/: .dockerignore  CMakeLists.txt  Dockerfile  HttpServer.py  MediatorVerifier.py  entrypoint.sh  extended-dom.ts  index.ts  mediator_cert.pem  testcase.json
fidoac_server/depends/libsnark/: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  README_doxygen.md
fidoac_server/depends/libsnark/depends/: .clang-format  CMakeLists.txt
fidoac_server/depends/libsnark/depends/libff/: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  README_doxygen.md
fidoac_server/depends/libsnark/depends/libff/.github/workflows/: ci.yml  dev-docs.yml
fidoac_server/depends/libsnark/depends/libff/ffi/: CMakeLists.txt  ffi.cpp  ffi.h  ffi_serialization.hpp  ffi_serialization.tcc
fidoac_server/depends/libsnark/depends/libff/libff/: CMakeLists.txt
fidoac_server/depends/libsnark/depends/libfqfft/: CMakeLists.txt
fidoac_server/depends/libsnark/libsnark/: CMakeLists.txt
fidoac_server/depends/libsnark/libsnark/common/: libsnark_serialization.hpp
fidoac_server/depends/libsnark/libsnark/common/data_structures/: accumulation_vector.hpp  accumulation_vector.tcc  integer_permutation.cpp  integer_permutation.hpp  merkle_tree.hpp  merkle_tree.tcc  polynomial.hpp  set_commitment.cpp  set_commitment.hpp  set_commitment.tcc  sparse_vector.hpp  sparse_vector.tcc
fidoac_server/depends/libsnark/libsnark/common/default_types/: bacs_ppzksnark_pp.hpp  r1cs_gg_ppzksnark_pp.hpp  r1cs_ppzkadsnark_pp.cpp  r1cs_ppzkadsnark_pp.hpp  r1cs_ppzkpcd_pp.cpp  r1cs_ppzkpcd_pp.hpp  r1cs_ppzksnark_pp.hpp  r1cs_se_ppzksnark_pp.hpp  ram_ppzksnark_pp.hpp  ram_zksnark_pp.hpp  tbcs_ppzksnark_pp.hpp  tinyram_ppzksnark_pp.cpp  tinyram_ppzksnark_pp.hpp  tinyram_zksnark_pp.cpp  tinyram_zksnark_pp.hpp  uscs_ppzksnark_pp.hpp
fidoac_server/depends/libsnark/libsnark/common/routing_algorithms/: as_waksman_routing_algorithm.cpp  as_waksman_routing_algorithm.hpp  benes_routing_algorithm.cpp  benes_routing_algorithm.hpp
fidoac_server/depends/libsnark/libsnark/gadgetlib1/: constraint_profiling.cpp  constraint_profiling.hpp  gadget.hpp  gadget.tcc  pb_variable.hpp  pb_variable.tcc  protoboard.hpp  protoboard.tcc
fidoac_server/depends/libsnark/libsnark/gadgetlib1/examples/: simple_example.hpp  simple_example.tcc
fidoac_server/depends/libsnark/libsnark/gadgetlib1/gadgets/: basic_gadgets.hpp  basic_gadgets.tcc  gadget_from_r1cs.hpp  gadget_from_r1cs.tcc
fidoac_server/depends/libsnark/libsnark/gadgetlib1/tests/: gadgetlib1_test.cpp  test_basic_gadgets.cpp  test_bls12_377_membership_checks.cpp  test_bls12_377_pairing.cpp  test_curve_gadgets.cpp  test_fp12_2over3over2_gadgets.cpp  test_fp6_3over2_gadgets.cpp  test_kzg10_verifier_gadget.cpp  test_pairing.cpp  test_pairing_checks.cpp  test_r1cs_gg_ppzksnark_verifier_gadget.cpp  test_r1cs_ppzksnark_verifier_gadget.cpp
fidoac_server/depends/libsnark/libsnark/gadgetlib2/: adapters.cpp  adapters.hpp  constraint.cpp  constraint.hpp  gadget.cpp  gadget.hpp  gadgetMacros.hpp  infrastructure.cpp  infrastructure.hpp  integration.cpp  integration.hpp  pp.cpp  pp.hpp  protoboard.cpp  protoboard.hpp  variable.cpp  variable.hpp  variable_operators.hpp
fidoac_server/depends/libsnark/libsnark/gadgetlib2/examples/: simple_example.cpp  simple_example.hpp  tutorial.cpp
fidoac_server/depends/libsnark/libsnark/gadgetlib2/tests/: adapters_UTEST.cpp  constraint_UTEST.cpp  gadget_UTEST.cpp  gadgetlib2_test.cpp  integration_UTEST.cpp  protoboard_UTEST.cpp  variable_UTEST.cpp
fidoac_server/depends/libsnark/libsnark/knowledge_commitment/: kc_multiexp.hpp  kc_multiexp.tcc  knowledge_commitment.hpp  knowledge_commitment.tcc
fidoac_server/depends/libsnark/libsnark/polynomial_commitments/: bdfg21.hpp  bdfg21.tcc  kzg10.hpp  kzg10.tcc  kzg10_batched.hpp  kzg10_batched.tcc  polynomial_commitments.sage
fidoac_server/depends/libsnark/libsnark/polynomial_commitments/tests/: polynomial_commitment_test_utils.hpp  test_polynomial_commitments.cpp
fidoac_server/depends/libsnark/libsnark/reductions/bacs_to_r1cs/: bacs_to_r1cs.hpp  bacs_to_r1cs.tcc
fidoac_server/depends/libsnark/libsnark/reductions/r1cs_to_qap/: r1cs_to_qap.hpp  r1cs_to_qap.tcc
fidoac_server/depends/libsnark/libsnark/reductions/r1cs_to_sap/: r1cs_to_sap.hpp  r1cs_to_sap.tcc
fidoac_server/depends/libsnark/libsnark/reductions/ram_to_r1cs/: ram_to_r1cs.hpp  ram_to_r1cs.tcc
fidoac_server/depends/libsnark/libsnark/reductions/tbcs_to_uscs/: tbcs_to_uscs.hpp  tbcs_to_uscs.tcc
fidoac_server/depends/libsnark/libsnark/reductions/uscs_to_ssp/: uscs_to_ssp.hpp  uscs_to_ssp.tcc
fidoac_server/depends/libsnark/libsnark/relations/: variable.hpp  variable.tcc
fidoac_server/depends/libsnark/libsnark/zk_proof_systems/ppzksnark/: README.md
fidoac_server/include/http-server/: CMakeLists.txt  server_http.hpp
fidoac_server/include/libsnark-sha256/: fido_ac_proof.hpp  fido_ac_prover.hpp  fido_ac_trusted_setup.hpp  fido_ac_verifier.hpp
fidoac_server/include/libsnark-sha256/gadgets/: age_verification_gadget.hpp  fido_ac_gadget.hpp  sha256_93B_gadget.hpp
fidoac_server/public/: fido-ac.js  index.html
fidoac_server/public/.well-known/: assetslink.json
fidoac_server/rust/: verificationkey  zinfo.txt
fidoac_server/rust/src/: main.rs
fidoac_server/rust/src/common/: mod.rs
fidoac_server/rust/src/zkp/: mod.rs  zkpmain.rs
fidoac_server/setup/: CMakeLists.txt  main.cpp  main.hpp
fidoac_server/src/: CMakeLists.txt  fido_ac_prover.cpp  fido_ac_trusted_setup.cpp  fido_ac_verifier.cpp
fidoac_server/src/gadgets/: age_verification_gadget.cpp  fido_ac_gadget.cpp  sha256_93B_gadget.cpp
fidoac_server/verify/: CMakeLists.txt  main.cpp  main.hpp
(+492 files in other folders)
