cmake_minimum_required(VERSION 3.18.1)
project(libsnark-fido-ac)

#set(CMAKE_CXX_STANDARD 11)
add_definitions(-DBOOST_ERROR_CODE_HEADER_ONLY)
find_package(nlohmann_json 3.11.2 REQUIRED)
if(${USE_PREBUILT_LIBS})
    add_subdirectory(src)
    add_subdirectory(setup)
    add_subdirectory(verify)
else()
    add_subdirectory(depends/libsnark)
    add_subdirectory(src)
    add_subdirectory(setup)
    add_subdirectory(verify)
endif()
